<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="">


        <item
            android:id="@+id/customer_details"
            android:icon="@drawable/customer"
            android:title="@string/customer_details" />
        <item
            android:id="@+id/search_customer"
            android:icon="@drawable/customer"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/update_customer"
            android:icon="@drawable/customer"
            android:title="@string/menu_slideshow" />
        <!--<item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />-->


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/customer"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/customer"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
